infra-as-code/basic-infra/4-services/yamls/kyverno_cluster_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - image: "${REPOSITORY_URL}/*"
${KEY_CONFIG_YAML}
